--- a/index.html
+++ b/index.html
@@ -6,26 +6,24 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="ui">
-    <div id="title-screen">
-      <h1>Pro Basket Duel</h1>
-      <button id="btn-solo">Mode Solo</button>
-      <button id="btn-versus">2 Joueurs</button>
-      <p>Contrôles :</p>
-      <p>Joueur 1 : A / D / W</p>
-      <p>Joueur 2 : ← / → / ↑</p>
-    </div>
 
-    <div id="scoreboard" class="hidden">
-      <span id="score-p1">J1 : 0</span>
-      <span id="score-p2">J2 : 0</span>
-      <span id="mode-label"></span>
-    </div>
+  <div id="menu">
+    <h1>Pro Basket Duel</h1>
+    <button id="btn-solo">Mode Solo</button>
+    <button id="btn-versus">2 Joueurs</button>
+    <p>Joueur 1 : A / D / W</p>
+    <p>Joueur 2 : ← / → / ↑</p>
+  </div>
+
+  <div id="score" class="hidden">
+    <span id="p1">J1 : 0</span>
+    <span id="p2">J2 : 0</span>
+    <span id="mode"></span>
   </div>
 
   <canvas id="gameCanvas" width="960" height="540"></canvas>
 
-  <!-- Sons (remplace les src par tes fichiers) -->
+  <!-- Sons (mets tes fichiers) -->
   <audio id="snd-score" src="score.mp3"></audio>
   <audio id="snd-bounce" src="bounce.mp3"></audio>
   <audio id="snd-start" src="start.mp3"></audio>
